--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mad9135-p1-react-crud-list",
   "version": "0.1.0",
-  "homepage": "https:myanimal.tk",
+  "homepage": "https://myanimal.tk",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
